# Kascade

./: CMAKE_QUICKREF.md  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
Kascade/: CMakeLists.txt
Kascade/src/: Kascade.cpp  Kascade.h
Kascade/src/core/: Application.cpp  Application.h  Swapchain.cpp  Swapchain.h  VulkanInstance.cpp  VulkanInstance.h
models/: rubber_duck.mtl
models/ToyCar/glTF/: ToyCar.gltf
shaders/: compile_shaders.bat  frag.spv  gltf.frag  gltf.vert  gltf_frag.spv  gltf_vert.spv  shader.frag  shader.vert  vert.spv
source/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Cubemap.cpp  Cubemap.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GltfDescriptors.cpp  GltfDescriptors.h  GltfMaterial.cpp  GltfMaterial.h  GltfMesh.cpp  GltfMesh.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  GltfPrimitive.cpp  GltfPrimitive.h  GltfVertex.cpp  GltfVertex.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  (+13 more)
